﻿- Stop Harmony error message from (incorrectly) showing when loading into editors.


Version 2.3.6

- Add ClearAllWorkplaceCache method to enable other mods to trigger workplace cache clearance for all buildings at once
- Improve mod conflict detection and notification
- Implement 'Don't show again' option for Plop the Growables warning (and add rider to description making it more explicit that both mods CAN still be used together)
- Overhaul logging


Version 2.3.5

- Growable options now have Plop the Growables behaviour enabled by default
- Add warning if Plop the Growables is also subscribed
- Improve mod conflict and Harmony error notifications


Version 2.3.4

- Add option toggle for confirmation of bulldozing RICO ploppables
- Add option toggle for auto-demolition of RICO ploppables (e.g. by building roads or other buildings)
- Improve update notifications (thanks, macsergey!)
- Add ClearWorkplaceCache method to enable other mods to trigger workplace cache clearance
- Add pt-br translation


Version 2.3.3

- Attempt fix for game not correctly reporting ILoading.currentMode as AppMode.game
- Add rs translation


Version 2.3.2

- Fix for author RICO settings files with _Data postfix but no package prefix
- Add nl translation
- Update fr translation


Version 2.3.1

- RICO ploppable complaints checkboxes now set when 'All RICO' checkboxes are set
- Clarify text labels for growable options
- Adjust thumbnail rendering angle
- Cleanup legacy code remnants


Version 2.3

- Add 'Instant plopping' option for growables
- Add 'Disable zone check' option for growables
- Add 'Disable district specialization check' option for growables
- Add 'Ignore low land value complaint' option
- Add 'Ignore too few services complaint' option
- Add 'Make plopped buildings historical' option
- Current building selection (if any) is now pre-selected when opening settings panel
- Double-clicking on a building button directly opens settings panel for that building